--- a/add.html
+++ b/add.html
@@ -75,7 +75,7 @@
           };
     
           // Question: What does this code do??
-          $.post("/api/", newReservation)
+          $.post("/api/tables/", newReservation)
             .then(function(data) {
               console.log("add.html", data);
               alert("Adding reservation...");
