--- a/add.html
+++ b/add.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery.js"></script>
 
@@ -56,6 +57,10 @@
                 <div class="text-right">
                     <button type="submit" class="btn btn-success btn-md" id="add-btn"><span class="fa fa-fire"></span>Add</button>
                 </div>
+                <br>
+                <br>
+                <a href="/api/tables/">API Table Link | </a><a href="/api/waitlist/">API Wait List</a>
+
                 </div>
             </div>
     
