--- a/view.html
+++ b/view.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery.js"></script>
 
@@ -17,7 +18,7 @@
             <h1 class="title"><i class="fas fa-fire"></i>No Reservations</h1>
             <h3>An Ode to Anthony Bourdain</h3>
             <hr>
-            <a href="view.html"><button class="btn btn-success btn-lg"><span class="fa fa-plus"></span>Add Reservation</button></a>
+            <a href="add.html"><button class="btn btn-success btn-lg"><span class="fa fa-plus"></span>Add Reservation</button></a>
         </div>
     </div>
 
@@ -32,10 +33,13 @@
                     <input type="text" id="reservation-search" class="form-control">
                     <br>
                     <div class="text-right">
-                    <button type="submit" class="btn btn-primary btn-md" id="search-btn"><span class="fa fa-search"></span> Search the Reservation List</button>
-                </div>
-            </div>   
+                    <button type="submit" class="btn btn-success btn-md" id="search-btn"><span class="fa fa-search"></span> Search the Reservation List</button>
+                    </div>
+                </div>   
             </div>
+            <br>
+            <br>
+            <a href="/api/tables/">API Table Link | </a><a href="/api/waitlist/">API Wait List</a>
         </div>
     </div>
 
