--- a/add.html
+++ b/add.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="server.js"></script>
@@ -18,7 +18,7 @@
             <h1 class="title"><i class="fas fa-fire"></i>No Reservations</h1>
             <h3>An Ode to Anthony Bourdain</h3>
             <hr>
-            <a href="view.html"><button class="btn btn-success btn-lg"><span class="fa fa-eye"></span>View Reservations</button></a>
+            <a href="/"><button class="btn btn-success btn-lg"><span class="fa fa-eye"></span>View Reservations</button></a>
         </div>
     </div>
 
